--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,7 +21,7 @@ const yearsLabel = `${years} year${years === 1 ? '' : 's'}`;
 >
   <div class="about">
     <p>
-      Welcome! I’m <strong>José</strong> — the kid sitting down with pen and paper in the photo above. I'm a grad student and the guy behind
+      Welcome! I’m <strong>José</strong> — the kid sitting down with pen and paper in the photo above. I'm an engineering grad student and the guy behind
       <strong>LifeLoggerz</strong>. I’m obsessed with optimizing my time and turning variable actions into clean,
       repeatable systems. When I'm not working or pursuing my other hobbies, I build <strong>Google Sheets dashboards, Python tools, and routines that make research (and life)
       more efficient.</strong>
@@ -35,7 +35,7 @@ const yearsLabel = `${years} year${years === 1 ? '' : 's'}`;
     </p>
     <p>
       Check out the <strong>2023, 2024, and 2025 raw data sheets</strong> for insight into how these systems evolved.
-      I had <strong>no professional experience with Excel or Google Sheets before</strong>, so I learned formula by formula. Formulas gave way to formatting, and then I learned how to use Google Apps Script to automate processes. 
+      I had <strong>no professional experience with Excel or Google Sheets before</strong>, so I learned formula by formula. Formulas gave way to formatting, and then I learned how to use Google Apps Script and APIs to automate processes. 
       It only takes <strong>5 minutes</strong> for me to log my essential stats, and my diary log can take much longer. However, logging has become second-nature. Doesn't matter how beat or tired I am — <strong>it's gotta get done.</strong>
     </p>
 
