--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,7 +18,7 @@ const yearsLabel = `${years} year${years === 1 ? '' : 's'}`;
   pubDate="2025-10-14"
   heroImage="/images/about-lifeloggerz.png"
   wide
-  showViews={false}  <!-- 👈 disables the counter -->
+  showViews={false}
 >
   <div class="about">
     <p>
