--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ const link = (p: string = '') => `${base}${p}`;
       <HeaderLink href={link('')} exact>Home</HeaderLink>
       <HeaderLink href={link('blog/')}>Blog</HeaderLink>
       <HeaderLink href={link('templates/')}>Templates</HeaderLink>
-      <HeaderLink href={link('projects/')}>Projects</HeaderLink>
+      <HeaderLink href={link('downloads/')}>Downloads</HeaderLink>
       <HeaderLink href={link('books/')}>Books</HeaderLink>
       <HeaderLink href={link('albums/')}>Albums</HeaderLink>
       <HeaderLink href={link('art/')}>Art</HeaderLink>
