--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -45,7 +45,7 @@ const link = (p: string = '') => `${base}${p}`;
           <HeaderLink href={link('art/')}>Art</HeaderLink>
           <HeaderLink href={link('inspirations/')}>Inspirations</HeaderLink>
           <HeaderLink href={link('guitar/')}>Guitar</HeaderLink>
-          <HeaderLink href={link('projects/')}>Projects</HeaderLink>
+          <HeaderLink href={link('downloads/')}>Downloads</HeaderLink>
           <HeaderLink href={link('about/')}>About</HeaderLink>
         </div>
         <a class="contact-btn" href="mailto:smartstuffstays@gmail.com">Contact</a>
